deployment/service-w-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api
  labels:
    app: web-api
    project: istio-test
spec:
  type: NodePort
  ports:
    - port: 3000  
      name: http
      protocol: TCP
  selector:
    app: web-api
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    project: istio-test
spec:
  type: NodePort
  ports:
    - port: 3000 
      name: http
      protocol: TCP
  selector:
    app: frontend
---
